sql.h

typedef unsigned char GoUint8;
typedef GoInt64 GoInt;
typedef __SIZE_TYPE__ GoUintptr;
extern GoUintptr Open(char* cDriverName, char* cDataSourceName);
extern GoUint8 Ping(GoUintptr uptr);
extern GoUint8 DBClose(GoUintptr uptr);
extern GoUintptr StmtPrepare(GoUintptr u, char* cQuery);
extern char** GetColumns(GoUintptr uptr);
extern char** GetRow(GoUintptr uptr, GoInt i);
extern char** GetTypes(GoUintptr uptr);
extern int GetCount(GoUintptr uptr);
extern GoUintptr QueryExec(GoUintptr u, char* cQuery);
extern GoUintptr StmtExec(GoUintptr u, char* cArgs);